--- a/1ST/project.ipynb
+++ b/1ST/project.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -110,8 +110,8 @@
       " 19  장타      458 non-null    float64\n",
       " 20  OPS     458 non-null    float64\n",
       " 21  wRC+    458 non-null    float64\n",
-      " 22  수상여부    458 non-null    int64  \n",
-      "dtypes: float64(7), int64(15), object(1)\n",
+      " 22  수상여부    458 non-null    object \n",
+      "dtypes: float64(7), int64(14), object(2)\n",
       "memory usage: 82.4+ KB\n",
       "None\n",
       "                연도         WAR          득점          안타         2루타  \\\n",
@@ -134,27 +134,27 @@
       "75%      4.000000   20.000000   83.000000   22.000000   62.000000  ...   \n",
       "max     12.000000   53.000000  144.000000   66.000000  127.000000  ...   \n",
       "\n",
-      "               삼진          병살         희생타       희생플라이          타율          출루  \\\n",
+      "             고의사구          삼진          병살         희생타       희생플라이          타율  \\\n",
       "count  458.000000  458.000000  458.000000  458.000000  458.000000  458.000000   \n",
-      "mean    76.530568    8.692140    4.462882    4.240175    0.297544    0.373699   \n",
-      "std     25.108869    4.012451    5.212732    2.498832    0.028318    0.031660   \n",
-      "min     29.000000    1.000000    0.000000    0.000000    0.203000    0.279000   \n",
-      "25%     58.000000    6.000000    0.000000    2.000000    0.279000    0.353000   \n",
-      "50%     73.000000    8.000000    2.000000    4.000000    0.295000    0.372000   \n",
-      "75%     90.000000   11.000000    7.000000    6.000000    0.317000    0.394000   \n",
-      "max    156.000000   23.000000   28.000000   13.000000    0.376000    0.503000   \n",
+      "mean     2.447598   76.530568    8.692140    4.462882    4.240175    0.297544   \n",
+      "std      2.817281   25.108869    4.012451    5.212732    2.498832    0.028318   \n",
+      "min      0.000000   29.000000    1.000000    0.000000    0.000000    0.203000   \n",
+      "25%      1.000000   58.000000    6.000000    0.000000    2.000000    0.279000   \n",
+      "50%      2.000000   73.000000    8.000000    2.000000    4.000000    0.295000   \n",
+      "75%      4.000000   90.000000   11.000000    7.000000    6.000000    0.317000   \n",
+      "max     28.000000  156.000000   23.000000   28.000000   13.000000    0.376000   \n",
       "\n",
-      "               장타         OPS        wRC+        수상여부  \n",
+      "               출루          장타         OPS        wRC+  \n",
       "count  458.000000  458.000000  458.000000  458.000000  \n",
-      "mean     0.446148    0.819847  121.154367    0.163755  \n",
-      "std      0.078459    0.100332   25.546772    0.370458  \n",
-      "min      0.273000    0.593000   63.100000    0.000000  \n",
-      "25%      0.385000    0.748000  103.325000    0.000000  \n",
-      "50%      0.444000    0.813500  121.200000    0.000000  \n",
-      "75%      0.495000    0.881500  137.600000    0.000000  \n",
-      "max      0.720000    1.198000  207.300000    1.000000  \n",
+      "mean     0.373699    0.446148    0.819847  121.154367  \n",
+      "std      0.031660    0.078459    0.100332   25.546772  \n",
+      "min      0.279000    0.273000    0.593000   63.100000  \n",
+      "25%      0.353000    0.385000    0.748000  103.325000  \n",
+      "50%      0.372000    0.444000    0.813500  121.200000  \n",
+      "75%      0.394000    0.495000    0.881500  137.600000  \n",
+      "max      0.503000    0.720000    1.198000  207.300000  \n",
       "\n",
-      "[8 rows x 22 columns]\n"
+      "[8 rows x 21 columns]\n"
      ]
     }
    ],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
